deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: error-pages
spec: 
  selector:
    pod: error-pages
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
